Usando let para definir variáveis

--- a/01_Escopo.html
+++ b/01_Escopo.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Escopo Javascript</title>
 </head>
 <body>
     <script>
-        console.log(name)
-        var name = 'Simone';
-        var name = 'Pedro';
-        var name = 'Luis';
+    let name = 'batista';
+    //escopo blocos vai funcionar o log 
+    {
+    let name = 'maycon'
+    console.log(name)
+    }
+    console.log(name)
+        //console.log(name)
+        //var name = 'Simone';
+        //var name = 'Pedro';
+        //var name = 'Luis';
     </script>
     
 </body>
