Usando const para definir variáveis

--- a/01_Escopo.html
+++ b/01_Escopo.html
@@ -8,17 +8,25 @@
 </head>
 <body>
     <script>
-    let name = 'batista';
+    //let name = 'batista';
     //escopo blocos vai funcionar o log 
     {
-    let name = 'maycon'
-    console.log(name)
+    //let name = 'maycon'
+    //console.log(name)
     }
-    console.log(name)
+    //console.log(name)
         //console.log(name)
         //var name = 'Simone';
         //var name = 'Pedro';
         //var name = 'Luis';
+
+    let name = 'Maycon';
+    const car = {
+        name: 'ForKa',
+        color: 'Red'
+
+    }
+    console.log(car, 'Hello');
     </script>
     
 </body>
