Manipulando variáveis usando const

--- a/01_Escopo.html
+++ b/01_Escopo.html
@@ -27,6 +27,9 @@
 
     }
     console.log(car, 'Hello');
+    //Manipulacao da const
+    car.name = 'BMW';
+    console.log(car)
     </script>
     
 </body>
