Usando let dentro de uma function

--- a/01_Escopo.html
+++ b/01_Escopo.html
@@ -20,7 +20,7 @@
         //var name = 'Pedro';
         //var name = 'Luis';
 
-    let name = 'Maycon';
+    //let name = 'Maycon';
     const car = {
         name: 'ForKa',
         color: 'Red'
@@ -30,6 +30,14 @@
     //Manipulacao da const
     car.name = 'BMW';
     console.log(car)
+
+    //Funcao que permite ver o nome no console log
+    //Usando let dentro de uma funcão
+    function name(){
+        let name = 'Jennifer';
+        console.log(name)
+    }
+    name()
     </script>
     
 </body>
