--- a/02_arrow-functions.html
+++ b/02_arrow-functions.html
@@ -5,11 +5,32 @@
     <title>Arrow functions</title>
   </head>
   <body>
-    <input class="input" type="text" />
+    <button class="btn">Confirmar</button>
     <script>
-      const input = document.querySelector('.input')
-      input.addEventListener('change', function(event) {
-        console.log(this)
+
+    //Definir uma constante com funcão dentro dela
+    const values = {
+      firstNumber: 10, 
+      secondNumber: 20,
+
+      showValues: function(){
+        return `Primeiro Numero: ${this.firstNumber}  Segundo Numero: ${this.secondNumber}`
+      }, 
+      //Somente o this aqui vai printar no console o objeto windown a cada 2000 milisegundos
+      callShowValues: function(){
+        window.setTimeout(function() {
+          console.log(this)
+        }, 2000)
+      }
+    }
+
+
+      //querySelector é uma especie de buscador de um elemento
+      //Por padrão, ele só busca o primeiro
+      //Se quiser pegar todos os elementos, deve-se usar o querySelectorAll
+      const btn = document.querySelector('.btn')
+      btn.addEventListener('click', function(event) {
+        values.callShowValues();
       })
     </script>
   </body>
