Definindo duas funções de maneira diferentes no Javascript

--- a/02_arrow-functions.html
+++ b/02_arrow-functions.html
@@ -19,7 +19,7 @@
       //Somente o this aqui vai printar no console o objeto windown a cada 2000 milisegundos
       callShowValues: function(){
         window.setTimeout(function() {
-          console.log(this)
+          //console.log(this.showValues());
         }, 2000)
       }
     }
