--- a/02_02_arrow-functions.html
+++ b/02_02_arrow-functions.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-    //Definindo duas funções de manera diferentes no JavaScript    
+    //Definindo duas funções de manera diferentes no JavaScript usando arrow functions   
     function sum(num1, num2){
      return num1 + num2
     }
@@ -17,8 +17,12 @@
         return num1 + num2
     }
 
+    //Outra forma de usar a arrow functions em uma linha só
+    const arrowSumOneLine = (num1, num2) => num1 + num2;
+
     console.log(sum(10, 20))
     console.log(arrowSum(30, 20))
+    console.log(arrowSumOneLine(10, 5))
     </script>
     
     
