--- a/02_02_arrow-functions.html
+++ b/02_02_arrow-functions.html
@@ -20,9 +20,16 @@
     //Outra forma de usar a arrow functions em uma linha só
     const arrowSumOneLine = (num1, num2) => num1 + num2;
 
-    console.log(sum(10, 20))
-    console.log(arrowSum(30, 20))
-    console.log(arrowSumOneLine(10, 5))
+
+    //Outra forma de usar a arrow functions em uma linha só
+    const hello = name => console.log(`Hello ${name}`);
+    console.log(hello('Maria'));
+
+    console.log(sum(10, 20));
+    console.log(arrowSum(30, 20));
+    console.log(arrowSumOneLine(10, 5));
+
+
     </script>
     
     
