Uso do default parameters para setar valores o prevenir erros de código

--- a/05_default-parameters.html
+++ b/05_default-parameters.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <script>
-      function sum(firstNumber = 0, secondNumber = 0) {
+      //Com o uso de Default Parameters ajuda-se a prevenir erros de código 
+      //Porque voce consegue setar valores
+      function sum(firstNumber = 2, secondNumber = 2) {
         return firstNumber + secondNumber
       }
 
