--- a/07_arrays.html
+++ b/07_arrays.html
@@ -7,11 +7,17 @@
   <body>
     <script>
       const numbers = [0, 1, 2, 3, 4, 5, 6]
-
+      
+      //Uso do find pra encontrar o número X
       const findNumber = numbers.find(number => number > 3)
       console.log(findNumber)
+      
+      //Uso do find quando o número é maior do que está no arrays da como resultado no console -1
+      //const findIndexNumber = numbers.findIndex(number => number > 10)
+      //console.log(findIndexNumber)
 
-      const findIndexNumber = numbers.findIndex(number => number > 10)
+      //Uso do find em um array vai printar 5 no console
+      const findIndexNumber = numbers.findIndex(number => number > 4)
       console.log(findIndexNumber)
 
       console.log(numbers)
