Uso do findIndex pra encontrar próximo número dentro de um array

--- a/07_arrays.html
+++ b/07_arrays.html
@@ -12,11 +12,11 @@
       const findNumber = numbers.find(number => number > 3)
       console.log(findNumber)
       
-      //Uso do find quando o número é maior do que está no arrays da como resultado no console -1
+      //Uso do findIndex quando o número é maior do que está no arrays da como resultado no console -1
       //const findIndexNumber = numbers.findIndex(number => number > 10)
       //console.log(findIndexNumber)
 
-      //Uso do find em um array vai printar 5 no console
+      //Uso do findIndex em um array vai printar 5 no console
       const findIndexNumber = numbers.findIndex(number => number > 4)
       console.log(findIndexNumber)
 
