Uso do includes para verificar a inclusão ou não de um number. Retorna um true or false

--- a/07_arrays.html
+++ b/07_arrays.html
@@ -21,6 +21,11 @@
       console.log(findIndexNumber)
 
       console.log(numbers)
+
+      //Uso da propiedade include para verificar a inclusão ou não de um número
+      // Neste caso o resultado no console é um booleano: True or False
+      const includeNumbers = numbers.includes(3)
+      console.log(includeNumbers)
     </script>
   </body>
 </html>
