--- a/09_promises.html
+++ b/09_promises.html
@@ -6,9 +6,14 @@
   </head>
   <body>
     <script>
+      //	Pra fazer requisicao é bom usar o promises
+      // Fetch é baseado em promises
       const repositorys = fetch('https://api.github.com/users/mayconbalves/repos?per_page=50')
 
         repositorys
+        // 	.then: se usa pra esperar a resposta
+        // resp.json é responsável de passar a resposta para a linha seguinte
+        // Para chamadas de Api, voce usao ou fetch ou Axius
           .then(resp => resp.json())
           .then(response => console.log(response))
           .catch(err => console.log(err))
